--- a/src/app/paginas/menu-recursos/menu-recursos.component.html
+++ b/src/app/paginas/menu-recursos/menu-recursos.component.html
@@ -3,53 +3,6 @@
 <div class = "contenedor"> 
 
 
-<!-- 
-  
-  <div class="example-container mat-elevation-z8">
-    <mat-table [dataSource]="dataSource" *ngFor="let table of tables">
-      <ng-container matColumnDef="position" [sticky]="true">
-        <mat-header-cell *matHeaderCellDef> Position </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
-        <mat-footer-cell *matFooterCellDef> Position Footer </mat-footer-cell>
-      </ng-container>
-  
-      <ng-container matColumnDef="name" [sticky]="false">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-        <mat-footer-cell *matFooterCellDef> Name Footer </mat-footer-cell>
-      </ng-container>
-  
-      <ng-container matColumnDef="weight" [stickyEnd]="false">
-        <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
-        <mat-footer-cell *matFooterCellDef> Weight Footer </mat-footer-cell>
-      </ng-container>
-  
-      <ng-container matColumnDef="symbol" [stickyEnd]="true">
-        <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
-        <mat-footer-cell *matFooterCellDef> Symbol Footer </mat-footer-cell>
-      </ng-container>
-  
-      <ng-container matColumnDef="filler">
-        <mat-header-cell *matHeaderCellDef> Filler header cell </mat-header-cell>
-        <mat-cell *matCellDef="let element"> Filler data cell </mat-cell>
-        <mat-footer-cell *matFooterCellDef> Filler footer cell </mat-footer-cell>
-      </ng-container>
-  
-      <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-      </mat-table>
-  </div>
-   -->
-
-
-
-
-
-
-
-
   <div class = "enColumna">
     <div class = "enFila" style = "height: 50%">
       <div class = "enColumna" style = "background: rgb(224, 180, 84); width:33%">
@@ -161,7 +114,7 @@
           <button  type="button"  (click) = "NavegarA('/crearCuestionarioDeSatisfaccion')" class="btn Aceptar">Crear</button>
         </div>
       </div>
-      <div class = "enColumna" style = "background:rgb(168, 167, 255); width:33%">
+      <div class = "enColumna" style = "background:#d3d3d4; width:33%">
         <div style = "height: 20%"><h3>Familias de cartas <br> para memorama</h3></div>
         <div style = "height: 50%">
           <img src="../assets/cartasMemorama.png" class = "imagenPanelRecursos" />
@@ -171,15 +124,15 @@
           <button type="button" (click) = "NavegarA('/crearFamiliasmemorama')" class="btn Aceptar">Crear</button>
         </div>
       </div>
-      <div class = "enColumna" style = "background: rgb(255, 255, 255);width:33%">
-        <div style = "height: 20%"><h3></h3></div>
+      <div class = "enColumna" style = "background: rgb(196, 4, 196);width:33%">
+        <div style = "height: 20%; text-align:center"><h3>EscapeRoom</h3></div>
         <div style = "height: 50%">
-          <!-- <img src="../assets/ruta.png" class = "imagenPanelRecursos" /> -->
+          <img src="../assets/EscapeRoom2.png" class = "imagenPanelRecursos" />
         </div>
-        <!-- <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button"  (click) = "NavegarA('/misEscenarios')" class="btn Eliminar" >Ver</button>
-          <button type="button" (click) = "NavegarA('/crearEscenario')" class="btn Aceptar">Crear</button>
-        </div> -->
+        <div class ="enFila" style = "width:40%; height: 30%">
+          <button type="button"  (click) = "NavegarA('/recursos/misRecursosEscaperoom')" class="btn Eliminar" >Ver</button>
+          <button type="button" (click) = "NavegarA('/recursos/misRecursosEscaperoom')" class="btn Aceptar">Crear</button>
+        </div>
       </div>
 
     </div>
