Escaperoom classes dashboard v2

--- a/src/app/paginas/mis-escenarios-escaperoom/mis-escenarios-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-escenarios-escaperoom.component.html
@@ -10,8 +10,7 @@
           <img src="../assets/pregunta.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button"  (click) = "NavegarA('/misMapas')" class="btn Eliminar" >Ver</button>
-          <button type="button" (click) = "NavegarA('/misMapas')" class="btn Aceptar">Crear</button>
+          <button type="button" (click) = "NavegarA('/misMapas')" class="btn Aceptar">Ver</button>
         </div>
       </div>
       <div class = "enColumna" style = "background:khaki; width:50%">
@@ -20,8 +19,7 @@
           <img src="../assets/cuestionario.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button"  (click) = "NavegarA('/misObjetos')" class="btn Eliminar" >Ver</button>
-          <button type="button" (click) = "NavegarA('/misObjetos')" class="btn Aceptar">Crear</button>
+          <button type="button" (click) = "NavegarA('/misObjetos')" class="btn Aceptar">Ver</button>
         </div>
       </div>
     </div>
@@ -32,8 +30,7 @@
           <img src="../assets/punto.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button"  (click) = "NavegarA('/misEnigmas')" class="btn Eliminar" >Ver</button>
-          <button type="button" (click) = "NavegarA('/misEnigmas')" class="btn Aceptar">Crear</button>
+          <button type="button" (click) = "NavegarA('/misEnigmas')" class="btn Aceptar">Ver</button>
         </div>
       </div>
       <div class = "enColumna" style = "background: rgb(228, 137, 175);width:50%">
@@ -42,8 +39,7 @@
           <img src="../assets/ruta.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button"  (click) = "NavegarA('/misSkins')" class="btn Eliminar" >Ver</button>
-          <button type="button" (click) = "NavegarA('/crearSkins')" class="btn Aceptar">Crear</button>
+          <button type="button" (click) = "NavegarA('/crearSkins')" class="btn Aceptar">Ver</button>
         </div>
       </div>
     </div>
