--- a/src/app/paginas/menu-recursos/menu-recursos.component.html
+++ b/src/app/paginas/menu-recursos/menu-recursos.component.html
@@ -130,7 +130,8 @@
           <img src="../assets/EscapeRoom2.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button" (click) = "NavegarA('/recursos/misRecursosEscaperoom')" class="btn Aceptar">Ver</button>
+          <button type="button" (click) = "NavegarA('/recursos/misRecursosEscaperoom')" class="btn Eliminar">Ver</button>
+          <button type="button" (click) = "NavegarA('/recursos/misRecursosEscaperoom/crearMapa')" class="btn Aceptar">Crear</button>
         </div>
       </div>
 
