--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
@@ -1,3 +1,113 @@
-<p>
-  mis-mapas-escaperoom works!
-</p>
+<div class="titulo">Escenarios</div>
+<mat-divider class="lineaDivisoria"></mat-divider>
+
+<div class="contenedor">
+
+  <mat-tab-group>
+    <mat-tab label="Mis Escenarios">
+      <br>
+      <div class ='enColumna'>
+        <form style = "width: 100%"  *ngIf="EscenariosProfesor;else Aviso_no_escenarios">
+
+          <div class = "filter">
+            <mat-form-field>
+              <input matInput (keyup)="applyFilterProfesor($event.target.value)" placeholder="Filtro para buscar escenarios...">
+              <i class="material-icons" matSuffix>search</i>
+            </mat-form-field>
+          </div>
+          <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+              <td mat-cell *matCellDef="let Escenario"> {{Escenario.Nombre}} </td>
+            </ng-container>
+
+
+
+
+
+            <ng-container matColumnDef="iconos">
+                <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                <td  mat-cell *matCellDef="let escenario">
+                  <div  style = "display: flex; align-items: right">
+                    <button  (click) = "VerEscenas(escenario)" mat-icon-button matTooltip="Ver el escenario">
+                      <i class="material-icons green md-36">edit</i>
+                    </button>
+                    <button (click) = "AbrirDialogoConfirmacionBorrarEscenario(escenario)" mat-icon-button matTooltip="Eliminar el escenario">
+                      <i class="material-icons red md-36">delete</i>
+                    </button>
+                    <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
+                      <i class="material-icons blue md-36">get_app</i>
+                    </button>
+                    <!-- TODAVÍA NO ESTÁ CLARA LA ESTRATEGIA DE PUBLICACION DE ESCENARIOS EN LA APP 
+                    <button *ngIf = "!coleccion.Publica" (click) = "HazPublica(coleccion)" mat-icon-button matTooltip="Haz pública la colección">
+                      <i class="material-icons grey md-36">public_off</i>
+                    </button>
+                    <button *ngIf = "coleccion.Publica" (click) = "HazPrivada(coleccion)" mat-icon-button matTooltip="Haz privada la colección">
+                      <i class="material-icons green md-36">public</i>
+                    </button>
+                    -->
+                  </div>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+            </tr>
+          </table>
+        </form>
+
+        <div class="contenedor">
+            <ng-template  #Aviso_no_escenarios><div class="texto">No tienes escenarios</div></ng-template>
+        </div>
+      </div>
+    </mat-tab>
+    <mat-tab label= "Escenarios públicos">
+      <br>
+      <div class ='enColumna'>
+        <form style = "width: 100%" *ngIf="EscenariosPublicos;else Aviso_no_escenarios_publicos">
+
+          <div class = "filter">
+            <mat-form-field>
+              <input matInput (keyup)="applyFilterPublica($event.target.value)" placeholder="Filtro para buscar escenario...">
+              <i class="material-icons" matSuffix>search</i>
+            </mat-form-field>
+          </div>
+          <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
+
+            <!-- Titulo Column -->
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+              <td mat-cell *matCellDef="let Escenario; let i = index">
+                {{Escenario.Nombre}} 
+              </td>
+
+            </ng-container>
+
+
+            <ng-container matColumnDef="iconos">
+              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+              <td mat-cell *matCellDef="let escenario">
+                <button (click) = "VerEscenasPublicas(escenario)" mat-icon-button matTooltip="Ver el escenario">
+                  <i class="material-icons green md-36">visibility</i>
+                </button>
+                <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
+                  <i class="material-icons blue md-36">get_app</i>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumnsPublica"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsPublica;">
+            </tr>
+          </table>
+        </form>
+
+        <div class="contenedor">
+            <ng-template  #Aviso_no_escenarios_publicos><div class="texto">No hay escenarios publicos</div></ng-template>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
