--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/crear-mapa/crear-mapa.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/crear-mapa/crear-mapa.component.html
@@ -23,6 +23,10 @@
                         <mat-label>Nombre</mat-label>
                         <input matInput formControlName="nombreEscenario" required>
                         <mat-error>Este campo es obligatorio</mat-error>
+                      </mat-form-field>
+                      <br>
+                      <br>
+                      <mat-form-field>
                         <mat-label>Descripcion</mat-label>
                         <input matInput formControlName="descripcionEscenario" required>
                         <mat-error>Este campo es obligatorio</mat-error>
