--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/agregar-escena-dialog/agregar-escena-dialog.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/agregar-escena-dialog/agregar-escena-dialog.component.html
@@ -1,3 +1,94 @@
-<p>
-  agregar-escena-dialog works!
-</p>
+<div class="titulo">Agregar escena</div>
+<mat-divider class="lineaDivisoria"></mat-divider>
+
+
+<mat-card class="panel">
+    <mat-card-header>
+      <mat-card-title>Añadir escena</mat-card-title>
+      <mat-card-subtitle>Introduce los parámetros</mat-card-subtitle>
+   </mat-card-header>
+   <mat-card-content>
+
+      <div class="form-group" style="margin: 15px;">
+          <label for="inputNombreEscena">Nombre</label>
+          <input  type="text" id="inputNombreEscena" class="form-control" requiered [(ngModel)]="nombreEscena" placeholder="Escribe el nombre del cromo">
+      </div>
+
+   </mat-card-content>
+
+
+   <div class="enFila" style="width: 100%">
+    <div>
+      <input #file id = "inputEscenaImagen" type="file" accept= 'image/*' (change)="ExaminarImagenEscena($event)" style="display:none">
+      <img class="imagenEscena" *ngIf="imagenCargadaEscena" mat-card-image [src]="imagenEscena">
+      <button (click) = "ActivarInputImagenEscena()" type="button" class="btn Agregar">
+      Imagen de delante <i class="material-icons">add_photo_alternate</i>
+      </button>
+    </div>
+    <div>
+      <input #file id = "inputEscenaArchivo" type="file" accept= 'application/JSON' (change)="ExaminarArchivoEscena($event)" style="display:none">
+      <p *ngIf="archivoCargadoEscena"> {{nombreArchivoEscena}} </p>
+      <button (click) = "ActivarInputEscenaArchivo()" type="button" class="btn Agregar">
+      Archivo de Escena <i class="material-icons">add_photo_alternate</i>
+      </button>
+    </div>
+  </div>
+
+
+
+  <mat-card-actions align="end">
+    <button  (click) = "LimpiarCampos()" type="button" class="btn Back">Limpiar Campos</button>
+    <button  (click) = "AgregarEscenaEscenario()"  class="btn Aceptar">Agregar Escenario</button>
+  </mat-card-actions>
+
+  </mat-card>
+
+  <div>
+    <form *ngIf="EscenasAgregadas[0]">
+
+      <div>
+        <p style="margin: 10px">
+          <span style="font-weight: bold;">Escenas creadas recientemente</span>
+        </p>
+      </div>
+
+      <table  align="center" mat-table [dataSource]="EscenasAgregadas" class="example-container mat-elevation-z8">
+
+        <ng-container matColumnDef="nombreEscena">
+          <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="width: 30%"> Nombre </th>
+          <td mat-cell *matCellDef="let escena"> {{escena.Nombre}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Imagen">
+          <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="width: 30%"> Nombre Imagen </th>
+          <td mat-cell *matCellDef="let escena"> {{escena.Tilesheet}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Archivo">
+          <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="width: 30%"> Nombre Archivo </th>
+          <td mat-cell *matCellDef="let escena"> {{escena.Archivo}} </td>
+        </ng-container>
+
+        <!-- Delete Column -->
+        <ng-container matColumnDef=" ">
+          <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+          <td mat-cell *matCellDef="let escena">
+            <button (click) = "BorrarEscena(escena)" mat-icon-button matTooltip="Borrar la escena {{escena.Nombre}}">
+              <i class="material-icons red md-36">delete</i>
+            </button>
+          </td>
+        </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      </table>
+    </form>
+  </div>
+
+
+
+<mat-dialog-actions align= "end">
+ <!-- <button mat-button [mat-dialog-close] class="btn Cerrar">Cerrar</button> -->
+  <button mat-button (click)= "Cerrar();" class="btn Cerrar">Cerrar</button>
+</mat-dialog-actions>
