--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/editar-escena-dialog/editar-escena-dialog.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/editar-escena-dialog/editar-escena-dialog.component.html
@@ -1,3 +1,49 @@
-<p>
-  editar-escena-dialog works!
-</p>
+
+<div class="titulo">Editar escena</div>
+<mat-divider class="lineaDivisoria"></mat-divider>
+
+<div class="contenedor">
+  <div class= "enColumna">
+  <mat-card class="panel">
+    <mat-card-content>
+
+
+            <div class="texto" style=" text-align: left;">
+                <mat-form-field style="margin: 15px;">
+                    <mat-label style="color: white;">Nombre </mat-label>
+                    <input matInput type="text" style="color: yellow;" placeholder="Nombre" required [(ngModel)]="nombreEscena" (change) = "cambios=true">
+                </mat-form-field>
+            </div>
+
+            <div class="enFila" style="width: 100%">
+              <div>
+                <input #file id = "inputEscenaImagen" type="file" accept= 'image/*' (change)="ExaminarImagenEscena($event)" style="display:none">
+                <img class="imagenEscena" *ngIf="imagenCargadaEscena" mat-card-image [src]="imagenEscena">
+                <button (click) = "ActivarInputImagenEscena()" type="button" class="btn Agregar">
+                Imagen de delante <i class="material-icons">add_photo_alternate</i>
+                </button>
+              </div>
+              <div>
+                <input #file id = "inputEscenaArchivo" type="file" accept= 'application/JSON' (change)="ExaminarArchivoEscena($event)" style="display:none">
+                <p *ngIf="archivoCargadoEscena"> {{nombreArchivoEscena}} </p>
+                <button (click) = "ActivarInputEscenaArchivo()" type="button" class="btn Agregar">
+                Archivo de Escena <i class="material-icons">add_photo_alternate</i>
+                </button>
+              </div>
+            </div>
+          
+
+            <button *ngIf="cambios" type="button" class="btn Aceptar"  (click)= "EditarEscena()">Aceptar Cambios <i class="material-icons">
+                    check </i></button>
+
+
+
+    </mat-card-content>
+  </mat-card>
+
+  <mat-dialog-actions align= "end">
+  <!-- <button mat-button [mat-dialog-close] class="btn Cerrar">Cerrar</button> routerLink= "editarColeccion" -->
+    <button mat-button (click)= "Cerrar();" class="btn Cerrar">Cerrar</button>
+  </mat-dialog-actions>
+</div>
+</div>
