--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/crear-mapa/crear-mapa.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/crear-mapa/crear-mapa.component.html
@@ -138,7 +138,7 @@
                         </div>
 
                       <div class="btnCambiarStep" style="margin-top:10px;">
-                          <button type="button" class="btn Next" matStepperNext (click) = "Finalizar()">Guardar Escenas</button>
+                          <button type="button" class="btn Next" (click) = "Finalizar()">Guardar Escenas</button>
                       </div>
 
                     </mat-step>
