--- a/src/app/paginas/mis-objetos-escaperoom/crear-objetos/crear-objetos.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/crear-objetos/crear-objetos.component.html
@@ -58,6 +58,7 @@
                           Imagen<i class="material-icons">add_photo_alternate</i>
                           </button>
                         </div>
+                      </div>
 
                       <mat-card-actions align="end">
                         <button  matStepperBack (click) = "LimpiarCampos()" type="button" class="btn Back">Limpiar Campos</button>
