--- a/src/app/paginas/mis-objetos-escaperoom/mostrar-objetos-publicos/mostrar-objetos-publicos.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/mostrar-objetos-publicos/mostrar-objetos-publicos.component.html
@@ -1,4 +1,4 @@
-<div class="titulo">Editar objeto</div>
+<div class="titulo">Objeto Público</div>
 <mat-divider class="lineaDivisoria"></mat-divider>
 
 <div class="contenedor">
