--- a/src/app/paginas/mis-enigmas-escaperoom/editar-enigmas-dialog/editar-enigmas-dialog.component.html
+++ b/src/app/paginas/mis-enigmas-escaperoom/editar-enigmas-dialog/editar-enigmas-dialog.component.html
@@ -1,3 +1,48 @@
-<p>
-  editar-enigmas-dialog works!
-</p>
+<div class="titulo">Editar enigma</div>
+<mat-divider class="lineaDivisoria"></mat-divider>
+
+<div class="contenedor">
+  <div class= "enColumna">
+  <mat-card class="panel">
+    <mat-card-content>
+
+
+            <div class="texto" style=" text-align: left;">
+              <mat-form-field>
+                <mat-label>Nombre</mat-label>
+                <input matInput formControlName="nombreEnigma" required>
+                <mat-error>Este campo es obligatorio</mat-error>
+              </mat-form-field>
+              <br>
+              <br>
+              <mat-form-field appearance="fill">
+                <mat-label>Tipo</mat-label>
+                <mat-select name="Types" placeholder="Selecciona el tipo" (change)="AsignarTipo()" [(ngModel)]="selectedType" required>
+                  <mat-option *ngFor="let type of types" [value]="type.id">
+                    {{type.nombre}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <br>
+              <br>
+              <mat-form-field appearance="fill">
+                <mat-label>Tipo</mat-label>
+                <mat-select name="Dificultades" placeholder="Selecciona la dificultad" (change)="AsignarDificultad()" [(ngModel)]="selectedDificultad" required>
+                  <mat-option *ngFor="let dificultad of dificultades" [value]="dificultad.id">
+                    {{dificultad.nombre}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <button *ngIf="cambios" type="button" class="btn Aceptar"  (click)= "EditarEnigma()">Aceptar Cambios 
+              <i class="material-icons">check </i>
+            </button>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-dialog-actions align= "end">
+  <!-- <button mat-button [mat-dialog-close] class="btn Cerrar">Cerrar</button> routerLink= "editarColeccion" -->
+    <button mat-button (click)= "Cerrar();" class="btn Cerrar">Cerrar</button>
+  </mat-dialog-actions>
+</div>
+</div>
