--- a/src/app/paginas/mis-enigmas-escaperoom/mostrar-enigmas-publicos/mostrar-enigmas-publicos.component.html
+++ b/src/app/paginas/mis-enigmas-escaperoom/mostrar-enigmas-publicos/mostrar-enigmas-publicos.component.html
@@ -1,3 +1,32 @@
-<p>
-  mostrar-enigmas-publicos works!
-</p>
+<div class="titulo">Enigma Público</div>
+<mat-divider class="lineaDivisoria"></mat-divider>
+
+<div class="contenedor">
+  <div class= "enColumna">
+  <mat-card class="panel">
+    <mat-card-content>
+
+
+            <div class="texto" style=" text-align: left;">
+                <mat-form-field style="margin: 15px;">
+                    <mat-label style="color: white;">Nombre </mat-label>
+                    <mat-label style="background-color: transparent">{{nombreEnigma}}</mat-label>
+                </mat-form-field>
+                <mat-form-field style="margin: 15px;">
+                  <mat-label style="color: rgb(77, 156, 13);">Dificultad </mat-label>
+                  <mat-label style="background-color: transparent">{{dificultadEnigma}}</mat-label>
+              </mat-form-field>
+              <mat-form-field style="margin: 15px;">
+                <mat-label style="color: rgb(39, 190, 201);">Tipo </mat-label>
+                <mat-label style="background-color: transparent">{{tipoEnigma}}</mat-label>
+            </mat-form-field>
+            </div>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-dialog-actions align= "end">
+  <!-- <button mat-button [mat-dialog-close] class="btn Cerrar">Cerrar</button> routerLink= "editarColeccion" -->
+    <button mat-button (click)= "Cerrar();" class="btn Cerrar">Cerrar</button>
+  </mat-dialog-actions>
+</div>
+</div>
