--- a/src/app/paginas/mis-skins-escaperoom/mostrar-skins-publicas/mostrar-skins-publicas.component.html
+++ b/src/app/paginas/mis-skins-escaperoom/mostrar-skins-publicas/mostrar-skins-publicas.component.html
@@ -1,3 +1,30 @@
-<p>
-  mostrar-skins-publicas works!
-</p>
+<div class="titulo">Skin Pública</div>
+<mat-divider class="lineaDivisoria"></mat-divider>
+
+<div class="contenedor">
+  <div class= "enColumna">
+  <mat-card class="panel">
+    <mat-card-content>
+
+
+            <div class="texto" style=" text-align: left;">
+                <mat-form-field style="margin: 15px;">
+                    <mat-label style="color: white;">Nombre </mat-label>
+                    <mat-label style="background-color: transparent">{{nombreSkin}}</mat-label>
+                  </mat-form-field>
+            </div>
+
+            <div class="enFila" style="width: 100%">
+              <div>
+                <img class="imagenSkin" *ngIf="imagenObjeto" mat-card-image [src]="imagenSkin">
+              </div>
+            </div>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-dialog-actions align= "end">
+  <!-- <button mat-button [mat-dialog-close] class="btn Cerrar">Cerrar</button> routerLink= "editarColeccion" -->
+    <button mat-button (click)= "Cerrar();" class="btn Cerrar">Cerrar</button>
+  </mat-dialog-actions>
+</div>
+</div>
