--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
@@ -110,4 +110,8 @@
       </div>
     </mat-tab>
   </mat-tab-group>
+
 </div>
+<div class="enColumna">
+  <button type="button" class="btn Aceptar" (click)="Crear()">Crear Escenario</button>
+  </div>
