--- a/src/app/paginas/mis-escenarios-escaperoom/mis-escenarios-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-escenarios-escaperoom.component.html
@@ -6,8 +6,8 @@
     <div class = "enFila" style = "height: 50%">
       <div class = "enColumna" style = "background: rgb(224, 180, 84); width:50%">
         <div style = "height: 20%"><h3>Escenarios</h3></div>
-        <div style = "height: 50%">
-          <img src="../assets/pregunta.png" class = "imagenPanelRecursos" />
+        <div style = "max-height: 40%; max-width: 60%; margin-top: 10%;margin-bottom: 10%;">
+          <img src="../assets/escenario.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
           <button type="button" (click) = "NavegarA('/misMapas')" class="btn Aceptar">Ver</button>
@@ -15,8 +15,8 @@
       </div>
       <div class = "enColumna" style = "background:khaki; width:50%">
         <div style = "height: 20%"><h3>Objetos</h3></div>
-        <div style = "height: 50%">
-          <img src="../assets/cuestionario.png" class = "imagenPanelRecursos" />
+        <div style = "max-height: 40%; max-width: 60%; margin-top: 10%;margin-bottom: 10%;">
+          <img src="../assets/objeto.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
           <button type="button" (click) = "NavegarA('/misObjetos')" class="btn Aceptar">Ver</button>
@@ -26,8 +26,8 @@
     <div class = "enFila" style = "height: 50%">
       <div class = "enColumna" style = "background: rgb(123, 184, 219);width:50%">
         <div style = "height: 20%"><h3>Enigmas</h3></div>
-        <div style = "height: 50%">
-          <img src="../assets/punto.png" class = "imagenPanelRecursos" />
+        <div style = "max-height: 40%; max-width: 60%; margin-top: 10%;margin-bottom: 10%;">
+          <img src="../assets/enigma.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
           <button type="button" (click) = "NavegarA('/misEnigmas')" class="btn Aceptar">Ver</button>
@@ -35,8 +35,8 @@
       </div>
       <div class = "enColumna" style = "background: rgb(228, 137, 175);width:50%">
         <div style = "height: 20%"><h3>Skins</h3></div>
-        <div style = "height: 50%">
-          <img src="../assets/ruta.png" class = "imagenPanelRecursos" />
+        <div style = "max-height: 40%; max-width: 60%; margin-top: 10%;margin-bottom: 10%;">
+          <img src="../assets/ash.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
           <button type="button" (click) = "NavegarA('/crearSkins')" class="btn Aceptar">Ver</button>
