--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/agregar-escena-dialog/agregar-escena-dialog.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/agregar-escena-dialog/agregar-escena-dialog.component.html
@@ -21,12 +21,14 @@
 
 
    <div class="enFila" style="width: 100%">
-    <div>
+    <div class="enColumnaLeft">
       <input #file id = "inputEscenaImagen" type="file" accept= 'image/*' (change)="ExaminarImagenEscena($event)" style="display:none">
-      <img class="imagenEscena" *ngIf="imagenCargadaEscena" mat-card-image [src]="imagenEscena">
       <button (click) = "ActivarInputImagenEscena()" type="button" class="btn Agregar">
-      Imagen de delante <i class="material-icons">add_photo_alternate</i>
-      </button>
+        Imagen de delante <i class="material-icons">add_photo_alternate</i>
+        </button>
+      <br>
+      <img style="margin-left: 15px;" class="imagenEscena" *ngIf="imagenCargadaEscena" mat-card-image [src]="imagenEscena">
+      
     </div>
     <div>
       <input #file id = "inputEscenaArchivo" type="file" accept= 'application/JSON' (change)="ExaminarArchivoEscena($event)" style="display:none">
@@ -54,8 +56,7 @@
           <span style="font-weight: bold;">Escenas creadas recientemente</span>
         </p>
       </div>
-
-      <table  align="center" mat-table [dataSource]="EscenasAgregadas" class="example-container mat-elevation-z8">
+      <table align="center" mat-table [dataSource]="EscenasAgregadas" class="example-container mat-elevation-z8">
 
         <ng-container matColumnDef="nombreEscena">
           <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="width: 30%"> Nombre </th>
@@ -82,10 +83,11 @@
           </td>
         </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
       </table>
+
     </form>
   </div>
 
