--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
@@ -7,7 +7,7 @@
     <mat-tab label="Mis Escenarios">
       <br>
       <div class ='enColumna'>
-        <form style = "width: 100%"  *ngIf="EscenariosProfesor;else Aviso_no_escenarios">
+        <form style = "width: 100%"  *ngIf="EscenariosProfesor.length>0;else Aviso_no_escenarios">
 
           <div class = "filter">
             <mat-form-field>
@@ -30,7 +30,7 @@
             <ng-container matColumnDef="iconos">
                 <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
                 <td  mat-cell *matCellDef="let escenario">
-                  <div  style = "display: flex; align-items: right">
+                  <div align="right">
                     <button  (click) = "VerEscenas(escenario)" mat-icon-button matTooltip="Ver el escenario">
                       <i class="material-icons green md-36">edit</i>
                     </button>
@@ -66,7 +66,7 @@
     <mat-tab label= "Escenarios públicos">
       <br>
       <div class ='enColumna'>
-        <form style = "width: 100%" *ngIf="EscenariosPublicos;else Aviso_no_escenarios_publicos">
+        <form style = "width: 100%" *ngIf="EscenariosPublicos.length>0;else Aviso_no_escenarios_publicos">
 
           <div class = "filter">
             <mat-form-field>
@@ -89,12 +89,14 @@
             <ng-container matColumnDef="iconos">
               <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
               <td mat-cell *matCellDef="let escenario">
+                <div align="right">
                 <button (click) = "VerEscenasPublicas(escenario)" mat-icon-button matTooltip="Ver el escenario">
                   <i class="material-icons green md-36">visibility</i>
                 </button>
                 <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
                   <i class="material-icons blue md-36">get_app</i>
                 </button>
+              </div>
               </td>
             </ng-container>
 
