--- a/src/styles.scss
+++ b/src/styles.scss
@@ -244,6 +244,40 @@ input[type=text] {
   font-size: 90%;
 }
 
+.scroll{
+  overflow-y:scroll; 
+  height:100px; 
+  display:block;
+}
+
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+  .mat-table {
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 1rem;
+      display: table;
+      border-collapse: collapse;
+      margin: 0px;
+  }
+  .mat-row,
+  .mat-header-row {
+      display: table-row;
+  }
+  .mat-cell,
+  .mat-header-cell {
+      word-wrap: initial;
+      display: table-cell;
+      padding: 0px 5px;
+      line-break: unset;
+      width: auto;
+      white-space: nowrap;
+      overflow: hidden;
+      vertical-align: middle;
+  }
+}
 
 .texto{
   // margin: 5px;
@@ -370,6 +404,16 @@ input[type=text] {
 
 }
 
+.escenascontenedor{
+  width: 100%;
+  margin-left: 5%;
+  height: auto;
+  padding: 10px;
+  border: 10px solid transparent;
+  background-color: transparent;
+
+}
+
 .enFila{
 
   border: 10px solid transparent;
@@ -391,6 +435,20 @@ input[type=text] {
   border: solid transparent;
   align-items: center;
   width: 100%;
+}
+
+.enColumnaLeft{
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+
+  justify-content: left ;
+  flex-direction: column;
+  // align-items: flex-start;
+  border: solid transparent;
+  align-items: left;
+  width: 100%;
+
 }
 
 
@@ -529,6 +587,16 @@ span.album5col {
 
 .Diamante {
   background-color: rgb(62, 177, 163);
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
+  border-bottom-left-radius: 15px !important;
+  border-bottom-right-radius: 15px !important;
+  box-shadow: 0px 3px 6px 0px rgb(50, 150, 138) !important;
+}
+
+.EscenasCardStyle{
+
+  background-color: rgba(49, 185, 219, 0.425);
   border-top-left-radius: 15px !important;
   border-top-right-radius: 15px !important;
   border-bottom-left-radius: 15px !important;
