--- a/src/app/paginas/mis-objetos-escaperoom/crear-objetos/crear-objetos.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/crear-objetos/crear-objetos.component.html
@@ -28,12 +28,14 @@
                       <br>
                       <mat-form-field appearance="fill">
                         <mat-label>Tipo</mat-label>
-                        <mat-select name="Type" placeholder="Selecciona el tipo" (change)="AsignarTipo()" [(ngModel)]="selectedType" required>
+                        <mat-select name="Type" placeholder="Selecciona el tipo" (selectionChange)="AsignarTipo()" [(ngModel)]="selectedType" [ngModelOptions]="{standalone: true}" required #select>
                           <mat-option *ngFor="let type of types" [value]="type.id">
                             {{type.nombre}}
                           </mat-option>
                         </mat-select>
                       </mat-form-field>
+
+
 
                       <div class="btnCambiarStep">
                         <button class="btn Next" matStepperNext (click)= DatosObjeto() >Siguiente</button>
@@ -45,25 +47,26 @@
                     <mat-step>
                       <ng-template matStepLabel>Imagen del Objeto</ng-template>
 
-                      <mat-card class="panel" >
+                      <mat-card class="panel" style="width:100%">
                         <mat-card-header>
                           <mat-card-title>Carga la imagen del objeto</mat-card-title>
-                      </mat-card-header>
+                        </mat-card-header>
 
-                      <div class="enFila" style="width: 100%">
-                        <div>
-                          <input #file id = "inputObjetoImagen" type="file" accept= 'image/*' (change)="ExaminarImagenObjeto($event)" style="display:none">
-                          <img class="imagenObjeto" *ngIf="imagenCargadaObjeto" mat-card-image [src]="imagenObjeto">
-                          <button (click) = "ActivarInputImagenObjeto()" type="button" class="btn Agregar">
-                          Imagen<i class="material-icons">add_photo_alternate</i>
-                          </button>
+                        <div class="enColumna" style="width: 100%">
+                          <div align="center">                            
+                            <input #file id = "inputObjetoImagen" type="file" accept= 'image/*' (change)="ExaminarImagenObjeto($event)" style="display:none">
+                            <button (click) = "ActivarInputImagenObjeto()" type="button" class="btn Agregar">
+                              Imagen<i class="material-icons">add_photo_alternate</i>
+                            </button>
+                            <br>
+                            <img style="margin-top: 15px; max-width: 20%; max-height: 20%;" class="imagenEscenaEscaperoom" *ngIf="imagenCargadaObjeto" mat-card-image [src]="imagenObjeto">
+                          </div>
                         </div>
-                      </div>
 
-                      <mat-card-actions align="end">
-                        <button  matStepperBack (click) = "LimpiarCampos()" type="button" class="btn Back">Limpiar Campos</button>
-                        <button  (click) = "CrearObjeto()"  class="btn Aceptar">Agregar Objeto y Finalizar</button>
-                      </mat-card-actions>
+                        <mat-card-actions align="end">
+                          <button  matStepperBack (click) = "LimpiarCampos()" type="button" class="btn Back">Limpiar Campos</button>
+                          <button  (click) = "CrearObjeto()"  class="btn Aceptar">Agregar Objeto y Finalizar</button>
+                        </mat-card-actions>
 
                         </mat-card>
                     </mat-step>
@@ -76,5 +79,9 @@
           </mat-tab>
   </mat-tab-group>
 </div>
+<div class="enColumna">
+  <button type="button" class="btn Aceptar" (click)="Volver()">Mis Objetos</button>
+</div>
+<br>
 
 
