--- a/src/app/paginas/mis-objetos-escaperoom/editar-objeto-dialog/editar-objeto-dialog.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/editar-objeto-dialog/editar-objeto-dialog.component.html
@@ -17,7 +17,7 @@
                 <br>
                 <mat-form-field appearance="fill">
                   <mat-label>Tipo</mat-label>
-                  <mat-select name="Type" placeholder="Selecciona el tipo" (change)="AsignarTipo()" [(ngModel)]="selectedType" required>
+                  <mat-select name="Type" placeholder="Selecciona el tipo" [(value)]="tipoObjeto" (selectionChange)="AsignarTipo()" [(ngModel)]="selectedType" required #select>
                     <mat-option *ngFor="let type of types" [value]="type.id">
                       {{type.nombre}}
                     </mat-option>
@@ -25,18 +25,31 @@
                 </mat-form-field>
             </div>
 
-            <div class="enFila" style="width: 100%">
-              <div>
+            <div class="enColumna" style="width: 100%">
+              <div align="center" style="width:100%">                            
                 <input #file id = "inputObjetoImagen" type="file" accept= 'image/*' (change)="ExaminarImagenObjeto($event)" style="display:none">
-                <img class="imagenObjeto" *ngIf="imagenObjeto" mat-card-image [src]="imagenObjeto">
                 <button (click) = "ActivarInputImagenObjeto()" type="button" class="btn Agregar">
-                Imagen<i class="material-icons">add_photo_alternate</i>
+                  Imagen<i class="material-icons">add_photo_alternate</i>
                 </button>
+                <br>
+                <br>
+                  <div style="float: left; width:50%;">
+                  <h5 style="background-color: rgb(92, 92, 92); border-top-left-radius: 5%;border-bottom-left-radius: 5% ;">Imagen Antigua</h5>
+                  <img style="margin-top: 15px; max-width: 20%; max-height: 20%;" class="imagenEscenaEscaperoom" mat-card-image [src]="imagenObjetoAntigua">
+                  </div>
+                  <div></div>
+                  <div *ngIf="imagenObjetoCargada" style="float: left; width:50%">
+                  <h5 style="background-color: rgb(92, 92, 92); border-top-right-radius: 5%;border-bottom-right-radius: 5% ;">Imagen Nueva</h5>
+                  <img style="margin-top: 15px; max-width: 20%; max-height: 20%;" class="imagenEscenaEscaperoom" *ngIf="imagenObjetoCargada" mat-card-image [src]="imagenObjeto">
+                  </div>
+
               </div>
             </div>
+            <div class="enColumna">
             <button *ngIf="cambios" type="button" class="btn Aceptar"  (click)= "EditarObjeto()">Aceptar Cambios 
               <i class="material-icons">check </i>
             </button>
+          </div>
     </mat-card-content>
   </mat-card>
 
