--- a/src/app/paginas/mis-objetos-escaperoom/mis-objetos-escaperoom.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/mis-objetos-escaperoom.component.html
@@ -7,7 +7,7 @@
     <mat-tab label="Mis Objetos">
       <br>
       <div class ='enColumna'>
-        <form style = "width: 100%"  *ngIf="ObjetosEscaperoom;else Aviso_no_objetos">
+        <form style = "width: 100%"  *ngIf="ObjetosEscaperoom.length>0;else Aviso_no_objetos">
 
           <div class = "filter">
             <mat-form-field>
@@ -30,7 +30,7 @@
             <ng-container matColumnDef="iconos">
                 <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
                 <td  mat-cell *matCellDef="let objeto">
-                  <div  style = "display: flex; align-items: right">
+                  <div align="right">
                     <button  (click) = "VerObjetoDialog(objeto)" mat-icon-button matTooltip="Ver el objeto">
                       <i class="material-icons green md-36">edit</i>
                     </button>
@@ -66,7 +66,7 @@
     <mat-tab label= "Objetos públicos">
       <br>
       <div class ='enColumna'>
-        <form style = "width: 100%" *ngIf="ObjetosEscaperoomPublicos;else Aviso_no_objetos_publicos">
+        <form style = "width: 100%" *ngIf="ObjetosEscaperoomPublicos.length>0;else Aviso_no_objetos_publicos">
 
           <div class = "filter">
             <mat-form-field>
@@ -89,12 +89,14 @@
             <ng-container matColumnDef="iconos">
               <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
               <td mat-cell *matCellDef="let objeto">
+                <div align="right">
                 <button (click) = "VerObjetoPublicoDialog(objeto)" mat-icon-button matTooltip="Ver el objeto">
                   <i class="material-icons green md-36">visibility</i>
                 </button>
                 <button (click) = "Descargar(objeto)" mat-icon-button matTooltip="Descargar objeto">
                   <i class="material-icons blue md-36">get_app</i>
                 </button>
+                </div>
               </td>
             </ng-container>
 
@@ -111,3 +113,7 @@
     </mat-tab>
   </mat-tab-group>
 </div>
+<div class="enColumna">
+  <button type="button" class="btn Aceptar" (click)="Crear()">Crear Objeto</button>
+  </div>
+<br>
